--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,4 @@
 steps:
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['functions', 'deploy', 'kh2-rando-seedgen', '--runtime=python39', '--entry-point=respond_to_http', '--gen2', '--region=us-central1']
+  args: ['functions', 'deploy', 'kh2-rando-seedgen', '--runtime=python39', '--source=.']
+  # args: ['functions', 'deploy', 'kh2-rando-seedgen', '--runtime=python39', '--entry-point=respond_to_http', '--gen2', '--region=us-central1']
