Add cloud logging option to build config

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,3 +7,4 @@ steps:
   - --runtime=python39
   - --trigger-http # Needed for first deploy
   - --allow-unauthenticated # Will likely remove this after testing period
+logging: CLOUD_LOGGING_ONLY
