--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,6 @@ steps:
   - kh2r_gen_seed
   - --runtime=python39
   - --trigger-http # Needed for first deploy
-  - --allow-unauthenticated # Will likely remove this after testing period
+  # - --allow-unauthenticated # Will likely remove this after testing period
 options:
   logging: CLOUD_LOGGING_ONLY
